# mra-scripts

./: .pre-commit-config.yaml  .prospector.yaml  README.md  add-pre-commit-hooks  create-empty-recomit-config  create-version  fix-precommit-files  gmf-saas  open-git-config-file  open-github-settings  pyproject.toml  remove-merged-branches  update-ubuntu-verion-in-ci  upgrade-c2cciutils-to-1.6  upgrade-c2cciutils-to-1.7  upgrade-ci-2024  upgrade-ci-2025  upgrade-python  use-ghcr  use-prospector-profile  use-renovate-to-trigger-rebuild  versions.yaml
.github/: ghci.yaml  renovate.json5  requirements.txt
.github/workflows/: main.yaml  pull-request-automation.yaml
