[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"
classifiers = []

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
multi-repo-automation = "1.7.0"
ruamel-yaml = "0.18.10"
githubkit = "0.12.12"

[tool.poetry.group.dev.dependencies]
# pylint = "2.15.6"
prospector = { version = "1.16.1", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-utils = "1.22.3"
prospector-profile-duplicated = "1.10.5"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
dynamic = ["dependencies", "version"]
name = "mra-scripts"
description = "Upgrade scripts"
readme = "README.md"
keywords = ["ci"]
license = "FreeBSD"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@camptocamp.com"}]
packages = [{ include = "mra_scripts" }]
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/sbrunner/mra-scripts"
"Bug Tracker" = "None/issues"

[build-system]
requires = ["poetry-core==2.1.2"]
build-backend = "poetry.core.masonry.api"
