[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint]
select = []
ignore = ["ANN401", "C90", "D100", "D104", "D105", "D107", "D200", "D202", "D207", "D208", "D212", "E501", "EM101", "EM102", "ERA001", "FA", "FBT001", "FBT002", "FIX002", "I001", "PERF203", "PLR09", "PLR2004", "Q000", "S101", "S603", "S607", "SIM105", "T201", "TD002", "W293"]
extend-select = ["UP", "I", "S", "B", "ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN", "ARG", "D", "E722", "INP001", "RET", "RUF012", "RUF100", "SLF"]
"**/tests/**" = ["ANN", "ARG", "D", "E722", "INP001", "RET", "RUF012", "RUF100", "SLF"]
"**/test_*.py" = ["ANN", "ARG", "D", "E722", "INP001", "RET", "RUF012", "RUF100", "SLF"]
"**/*_test.py" = ["ANN", "ARG", "D", "E722", "INP001", "RET", "RUF012", "RUF100", "SLF"]

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
multi-repo-automation = "1.7.0"
ruamel-yaml = "0.18.14"
githubkit = "0.13.0"

[tool.poetry.group.dev.dependencies]
# pylint = "2.15.6"
prospector = { version = "1.17.3", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-utils = "1.26.2"
prospector-profile-duplicated = "1.10.5"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
dynamic = ["dependencies", "version"]
name = "mra-scripts"
description = "Upgrade scripts"
readme = "README.md"
keywords = ["ci"]
license = "FreeBSD"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@camptocamp.com"}]
packages = [{ include = "mra_scripts" }]
requires-python = ">=3.9"
dependencies = ["multi-repo-automation", "ruamel-yaml", "githubkit"]

[project.urls]
repository = "https://github.com/sbrunner/mra-scripts"
"Bug Tracker" = "https://github.com/sbrunner/mra-scripts/issues"

[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"
